add sql database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "C:\\Users\\timot\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
